# learn_solana

./: Anchor.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app/: package.json  tsconfig.app.json  vite.config.ts
app/src/: App.tsx  main.tsx  types.ts
app/src/components/: CreatePollForm.tsx  InitializeButton.tsx  PollCard.tsx  PollList.tsx  WalletButton.tsx
app/src/hooks/: useVoting.ts
app/src/lib/: solana.ts
client/: codama.json  package.json
programs/voting/: Cargo.toml
programs/voting/src/: constants.rs  error.rs  lib.rs  state.rs
programs/voting/src/instructions/: create_poll.rs  initialize.rs  vote.rs
slide/: package.json
slide/.agents/skills/create-slide/: SKILL.md
slide/.agents/skills/create-theme/: SKILL.md
slide/.agents/skills/current-slide/: SKILL.md
slide/.agents/skills/slide-authoring/: SKILL.md
slide/slides/solana-intro/: index.tsx
